refactor swagger.js for local and render deployment
